--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
   intl_phone_number_input: ^0.7.4
   pinput: ^5.0.0
   smart_auth: ^2.0.0
+  equatable: ^2.0.5
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  dio: ^5.6.0
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
