--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   dio: ^5.6.0
   flutter_secure_storage: ^9.2.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -29,3 +30,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/icons/
