--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   dio: ^5.6.0
   flutter_secure_storage: ^9.2.2
   shimmer: ^3.0.0
+  image_picker: ^1.1.2
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
