--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   shimmer: ^3.0.0
   image_picker: ^1.1.2
   path: ^1.9.0
+  google_sign_in: ^6.2.1
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
+  flutter_facebook_auth: ^7.0.1
 
 dev_dependencies:
   flutter_test:
